# rust-app

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
app/: Cargo.toml  Dockerfile  database.db
app/src/: auth.rs  handlers.rs  main.rs  models.rs  openapi.rs
app/tests/: test.py
